@@ -222,22 +222,22 @@ result indicator .time.time-percent100 span	{display:none;}
 
 /*	Sectors (also turned into graph: sector_pie)
 	============================================= */
-sector *						{display:none;}
-sector[vocabulary="DAC"],
-sector[vocabulary="1"]			{font-size:1.0em; color:#000; width:239px; display:inline-block; vertical-align:top; padding:30px 40px 40px 40px; max-height:80px; min-height:80px;}
-sector:nth-child(even)			{background-color:#e9e9e9;}
-sector[vocabulary="DAC"]:before,
-sector[vocabulary="1"]:before	{content:"SECTOR"; font-size:14px; color:#000; width:240px; display:block; padding-bottom:5px;}
-sector span						{color:#000; padding-top:5px;}
-sector span:nth-of-type(1)		{line-height:1.2em;}
-sector span:nth-of-type(2)		{color:#000;}
-sector span:nth-of-type(2):after{content:"allocated"; padding-left:5px; display:inline-block;}
-img.sector_pie					{padding:40px 20px;}
+sector *		{display:none;}
+span.span_sector sector[vocabulary="DAC"],
+span.span_sector sector[vocabulary="1"]			{font-size:1.0em; color:#000; width:239px; display:inline-block; vertical-align:top; padding:30px 40px 40px 40px; max-height:80px; min-height:80px;}
+span.span_sector sector:nth-child(even)			{background-color:#e9e9e9;}
+span.span_sector sector[vocabulary="DAC"]:before,
+span.span_sector sector[vocabulary="1"]:before	{content:"SECTOR"; font-size:14px; color:#000; width:240px; display:block; padding-bottom:5px;}
+span.span_sector sector span					{color:#000; padding-top:5px;}
+span.span_sector sector span:nth-of-type(1)		{line-height:1.2em;}
+span.span_sector sector span:nth-of-type(2)		{color:#000;}
+span.span_sector sector span:nth-of-type(2):after{content:"allocated"; padding-left:5px; display:inline-block;}
+img.sector_pie	{padding:40px 20px;}
 
 
 /*	Budget table
 	============================================= */
-budget	{display:block; width:958px; border-top:1px solid #000; padding:15px 0 5px 0; border-bottom:0;}
+budget				  {display:block; width:958px; border-top:1px solid #000; padding:15px 0 5px 0; border-bottom:0;}
 budget:last-of-type	  {border-bottom:0px solid #000;}
 budget:nth-of-type(1) {margin-top:0px; padding-top:0;}
 budget:nth-of-type(1):before {content:"Budgets"; font-size:26px; color:#000; border-bottom:1px solid #000; display:block; padding:20px 40px; margin-bottom:25px;}
@@ -251,6 +251,20 @@ budget[type="1"]:nth-of-type(1) value:after, budget[type="2"]:nth-of-type(1) val
 budget period-start 	{display:inline-block; vertical-align:top; color:#000; font-size:1.0em; width:289px; max-width:289px; padding-left:40px; line-height:1.35em;}
 budget period-end	 	{display:inline-block; vertical-align:top; color:#000; font-size:1.0em; width:289px; max-width:289px; line-height:1.35em; position:relative;}
 budget value 			{display:inline-block; vertical-align:top; color:#000; font-size:1.0em; width:300px; max-width:300px; padding-right:40px; line-height:1.35em; position:relative;}
+
+
+/*	Planned Disbursement table
+	============================================= */
+planned-disbursement				{display:block; width:958px; border-top:1px solid #000; padding:15px 0 5px 0; border-bottom:0;}
+planned-disbursement:last-of-type	{border-bottom:0px solid #000;}
+planned-disbursement:nth-of-type(1) {margin-top:0px; padding-top:0;}
+planned-disbursement:nth-of-type(1):before {content:"Planned Disbursements"; font-size:26px; color:#000; border-bottom:1px solid #000; display:block; padding:20px 40px; margin-bottom:25px;}
+planned-disbursement:nth-of-type(1) period-start:before {content:"START DATE"; font-size:14px; color:#000; width:289px; display:block; padding-bottom:10px; border-bottom:1px solid #000; margin-bottom:15px; line-height:1.35em;}
+planned-disbursement:nth-of-type(1) period-end:before	{content:"END DATE"; font-size:14px; color:#000; width:289px; display:block; padding-bottom:10px; border-bottom:1px solid #000; margin-bottom:15px; line-height:1.35em;}
+planned-disbursement:nth-of-type(1) value:before		{content:"VALUE"; font-size:14px; color:#000; width:300px; display:block; padding-bottom:10px; border-bottom:1px solid #000; margin-bottom:15px; line-height:1.35em;}
+planned-disbursement period-start 	{display:inline-block; vertical-align:top; color:#000; font-size:1.0em; width:289px; max-width:289px; padding-left:40px; line-height:1.35em;}
+planned-disbursement period-end	 	{display:inline-block; vertical-align:top; color:#000; font-size:1.0em; width:289px; max-width:289px; line-height:1.35em; position:relative;}
+planned-disbursement value 			{display:inline-block; vertical-align:top; color:#000; font-size:1.0em; width:300px; max-width:300px; padding-right:40px; line-height:1.35em; position:relative;}
 
 
 /*	Transaction table
