@@ -4,6 +4,9 @@ Added SAVi chart and percentages for sector vocab 1
 Added FAQ link in toggle_settings section
 Fixed start/end dates border for SAVi
 CSS fixes for Print Friendly
+Display planned-disbursement element in SAVi
+Fix new element display for Print Friendly
+Update new element in /js for sorting
 
 
 Development Portal (2017-06-12 shi)
